initial Routes for Author, Booklog and User

--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -6,9 +6,9 @@
     <title>MapleLeaf Library</title>
   </head>
   <body>
-    Before
     <br />
-    <%- body %>
+    <%- include('../partials/header.ejs')%> 
+    <%- include('../partials/errorMessage.ejs') %> <%- body %>
     <br />
   </body>
 </html>
