Books Create/Index/New

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,14 +1,15 @@
 <header>
-    <nav>
-      <a href="/">MapleLeaf</a>
-      <ul>
-        <li><a href="/authors">Authors</a></li>
-        <li><a href="/authors/new">Add Author</a></li>
-        <li><a href="/booklogs">Booklogs</a></li>
-        <li><a href="/booklogs/new">Add Booklog</a></li>
-        <li><a href="/users">Users</a></li>
-        <li><a href="/users/new">Add User</a></li>
-      </ul>
-    </nav>
-  </header>
-  
+  <nav>
+    <a href="/">MapleLeaf</a>
+    <ul>
+      <li><a href="/authors">Authors</a></li>
+      <li><a href="/authors/new">Add Author</a></li>
+      <li><a href="/books">Books</a></li>
+      <li><a href="/books/new">Add Book</a></li>
+      <li><a href="/booklogs">Booklogs</a></li>
+      <li><a href="/booklogs/new">Add Booklog</a></li>
+      <li><a href="/users">Users</a></li>
+      <li><a href="/users/new">Add User</a></li>
+    </ul>
+  </nav>
+</header>
